# rudie2.0

./: .gitignore  Cargo.toml  README.md
diagrams/src/: full_diagram.excalidraw  rudie2.0_architecture.excalidraw
rudie-proc-macro/: Cargo.toml
rudie-proc-macro/src/: lib.rs
src/: lib.rs
src/base/: types.rs
src/macro_based/: extended_kalman_filter.rs
src/measurement_models/: mod.rs
src/process_models/: mod.rs
src/struct_based/: extended_kalman_filter.rs  mod.rs
src/trait_based/: extended_kalman_filter.rs  mod.rs
