[package]
name = "rudie-proc-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
syn = "2.0"
quote = "1.0.33"
proc-macro2 = { version = "1.0.68", features = [] }

[lib]
proc-macro = true